--- a/app/src/UI/Form.css
+++ b/app/src/UI/Form.css
@@ -4,3 +4,11 @@
   height: 500px;
   background-color: green;
 }
+
+
+.inputsContainer {
+  height: 75%;
+  width: 80%;
+  justify-content: center;
+  background-color: yellow;
+}
