--- a/app/src/UI/Form.css
+++ b/app/src/UI/Form.css
@@ -2,7 +2,9 @@
   display: flex;
   width: 100%;
   height: 500px;
-  background-color: green;
+            
+            
+  background-color: #223f75;
   justify-content: center;
 }
 
@@ -21,7 +23,11 @@
 }
 
 .meese {
-  background-color: purple;
+  background-color: white;
   height: 100%;
   width: 100%;
+}
+
+.addMooseButton {
+
 }
