--- a/app/src/UI/Form.css
+++ b/app/src/UI/Form.css
@@ -1,9 +1,7 @@
 .FormPanel {
   display: flex;
   width: 100%;
-  height: 500px;
-            
-            
+  height: 500px;   
   background-color: #223f75;
   justify-content: center;
 }
@@ -19,6 +17,7 @@
   background-color: rgb(145, 61, 61);
   height: 50px;
   padding: 0.5em;
+  text-align: right;
 }
 
 .meese {
@@ -28,7 +27,12 @@
 }
 
 .addMooseButton {
-
+  background-color:#FCBA19;
+  border-color: initial;
+  color: #003366;
+  border-radius: 5px;
+  padding: 5px;
+  height: 100%;
 }
 
 .moose{
