--- a/app/src/UI/Form.css
+++ b/app/src/UI/Form.css
@@ -30,9 +30,13 @@
   background-color:#FCBA19;
   border-color: initial;
   color: #003366;
-  border-radius: 5px;
-  padding: 5px;
   height: 100%;
+  padding:0.3em 1.2em;
+  border-radius:2em;
+}
+
+.addMooseButton:hover {
+  background-color:#f4cb64;
 }
 
 .moose{
