--- a/app/src/UI/Regs.css
+++ b/app/src/UI/Regs.css
@@ -1,7 +1,7 @@
 .PDFPanel {
   display: flex;
-  width: 100%;
-  height: 500px;   
-  background-color: #223f75;
+  width: 100px;
+  height: 100px;
+  background-color: green;
   justify-content: center;
 }
