--- a/app/src/UI/Form.css
+++ b/app/src/UI/Form.css
@@ -2,6 +2,8 @@
   display: flex;
   width: 100%;
   height: 500px;   
+  padding-top: 2em;
+  padding-bottom: 2em;
   background-color: #223f75;
   justify-content: center;
 }
@@ -27,12 +29,21 @@
   width: 100%;
 }
 
+.headerButtons {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
 .formButton {
   display: inline-block;
   padding: 10px 20px;
   border-radius: 4px;
+  margin: .5em;
   text-decoration: none;
-  background-color: #036;
+  background-color: rgb(35, 107, 178);
   color: #fff;
   cursor: pointer;
   border: none;
