--- a/app/src/UI/About.css
+++ b/app/src/UI/About.css
@@ -1,7 +1,12 @@
 .about-container {
-  display: block;
-  padding: 2rem;
-  width: 100%;
-  height: 100%;
-  background-color: rgb(162, 198, 255);
+  display: flex;
+  background-color: white;
+  flex-direction: row-reverse;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  margin: 2em;
 }
+
+
