--- a/app/src/UI/Footer.css
+++ b/app/src/UI/Footer.css
@@ -13,3 +13,13 @@ a{
     text-decoration: none;
     margin-left: 32px;
 }
+
+.divider {
+  display: block;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  margin-left: auto;
+  margin-right: auto;
+  border-style: inset;
+  border-width: 1px;
+}
