changes to header and footer, add button, correction to horizontal bar

--- a/app/src/UI/Footer.css
+++ b/app/src/UI/Footer.css
@@ -4,22 +4,20 @@
     flex-grow: 1;
     height: 75px;
     margin: 0;
-    align-items: center;
-    justify-content: start;
+    align-items: flex-start;
+    flex-direction: column;
+    flex-wrap: nowrap;
+}
+
+.footer-content{
+  padding: 32px
+}
+
+.footer-text-container{
+  padding-top: 16px;
 }
 
 a{
     color: #036;
     text-decoration: none;
-    margin-left: 32px;
-}
-
-.divider {
-  display: block;
-  margin-top: 0.5em;
-  margin-bottom: 0.5em;
-  margin-left: auto;
-  margin-right: auto;
-  border-style: inset;
-  border-width: 1px;
 }
