--- a/app/src/UI/Header.css
+++ b/app/src/UI/Header.css
@@ -51,6 +51,7 @@ position: relative;
 .headerButton {
   display: inline-block;
   padding: 6px 12px;
+  margin: 0.5em;
   border-radius: 4px;
   text-decoration: none;
   font-size: 16px;
@@ -61,12 +62,8 @@ position: relative;
   cursor: pointer;
 }
 
-.divider {
-  display: block;
-  margin-top: 0.5em;
-  margin-bottom: 0.5em;
-  margin-left: auto;
-  margin-right: auto;
-  border-style: inset;
-  border-width: 1px;
+.horizontal-line {
+  display: flex;
+  border-top: 2px solid rgb(217, 217, 217);
+  width: 100%;
 }
