--- a/app/src/UI/Header.css
+++ b/app/src/UI/Header.css
@@ -1,69 +1,90 @@
 .headerMain {
-position: relative;
-}
-
-.headerWrapper{
+  position: relative;
+  }
+  
+  .headerWrapper{
+      display: flex;
+      -webkit-box-pack: justify;
+      justify-content: space-between;
+      height: 64px;
+      margin: 0px 32px;
+  }
+  
+  .iconContainer{
+      display: flex;
+      flex-basis: 1;
+      margin-left: 10px;
+      align-items: center;
+      justify-content: center;
+  }
+  
+  .bcgovIcon{
+      max-height: 60px;
+      max-width: 100%;
+      border-style: none;
+      overflow-clip-margin: content-box;
+      overflow: clip;
+  }
+  
+  .titleContainer{
+      display: flex;
+      flex-basis: 6;
+      align-items: center;
+      justify-content: start;
+      flex-grow: 1;
+  }
+  
+  .headerText{
+      font-size: xx-large;
+      font-weight: bold;
+      color: #036;
+      margin-left: 20px;
+  }
+  
+  .headerButtonContainer {
     display: flex;
-    -webkit-box-pack: justify;
-    justify-content: space-between;
-    height: 64px;
-    margin: 0px 32px;
-}
-
-.iconContainer{
-    display: flex;
-    flex-basis: 1;
-    margin-left: 10px;
-    align-items: center;
-    justify-content: center;
-}
-
-.bcgovIcon{
-    max-height: 60px;
-    max-width: 100%;
-    border-style: none;
-    overflow-clip-margin: content-box;
-    overflow: clip;
-}
-
-.titleContainer{
-    display: flex;
-    flex-basis: 6;
     align-items: center;
     justify-content: start;
-    flex-grow: 1;
-}
-
-.headerText{
-    font-size: xx-large;
-    font-weight: bold;
-    color: #036;
-    margin-left: 20px;
-}
-
-.headerButtonContainer {
-  display: flex;
-  align-items: center;
-  justify-content: start;
-  padding-right: 0.5rem;
-}
-
-.headerButton {
-  display: inline-block;
-  padding: 6px 12px;
-  margin: 0.5em;
-  border-radius: 4px;
-  text-decoration: none;
-  font-size: 16px;
-  line-height: 27px;
-  background-color: #fff;
-  color:  #036;
-  border: 1px solid #323130;
-  cursor: pointer;
-}
-
-.horizontal-line {
-  display: flex;
-  border-top: 2px solid rgb(217, 217, 217);
-  width: 100%;
-}
+    padding-right: 0.5rem;
+  
+    .headerButton {
+      display: inline-block;
+      padding: 6px 12px;
+      margin: 0.5em;
+      border-radius: 4px;
+      text-decoration: none;
+      font-size: 16px;
+      line-height: 27px;
+      background-color: #fff;
+      color:  #036;
+      /* border: 1px solid #323130; */
+      cursor: pointer;
+    }
+  
+    .header-selected {
+      font-weight: bold;
+      display: inline-block;
+      padding: 6px 12px;
+      margin: 0.5em;
+      border-radius: 4px;
+      font-size: 16px;
+      line-height: 27px;
+      background-color: #fff;
+      color:  #036;
+      /* border: 1px solid #323130; */
+      cursor: pointer;
+      border-bottom: rgb(227, 168, 43);
+    }
+  }
+  
+  .horizontal-line {
+    display: flex;
+    border-top: 2px solid rgb(217, 217, 217);
+    width: 100%;
+  }
+  
+  .Tab__Indicator {
+    border-bottom-style: solid;
+    border-width: .5vh;
+    border-color: #FCBA19;
+  }
