--- a/app/src/UI/Form.css
+++ b/app/src/UI/Form.css
@@ -54,6 +54,33 @@
   background-color:#f4cb64;
 }
 
+.popup {
+  position: relative;
+  display: inline-block;
+}
+
+.popup .popuptext {
+  visibility: hidden;
+  width: 160px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 8px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -80px;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.popup:hover .popuptext {
+  visibility: visible;
+  opacity: 1;
+}
+
 .moose{
   margin: 1px;
   border: #223f75 1px solid;
