--- a/app/src/UI/Form.css
+++ b/app/src/UI/Form.css
@@ -57,6 +57,7 @@
 .popup {
   position: relative;
   display: inline-block;
+  color: white;
 }
 
 .popup .popuptext {
@@ -66,7 +67,6 @@
   color: #fff;
   text-align: center;
   border-radius: 6px;
-  padding: 8px 0;
   position: absolute;
   z-index: 1;
   bottom: 125%;
@@ -74,6 +74,10 @@
   margin-left: -80px;
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
+  padding: 10px;
+  left: -150px;
+  width: 300px;
+  z-index: 100;
 }
 
 .popup:hover .popuptext {
